<resources>
    <string name="app_name">BluetoothApp</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="enable_location_warning">Você deve conceder a permissão de localização para o correto funcionamento do
        bluetooth
    </string>
    <string name="no_device_found">Nenhum dispositivo encontrado.</string>
    <string name="start_scan">Iniciar Scan</string>
    <string name="stop_scan">Parar Scan</string>
    <string name="rssi">RSSI:</string>
    <string name="mac_address">Endereço MAC:</string>
    <string name="name">Nome:</string>
</resources>
