<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools" xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <import type="android.view.View"/>
        <import type="com.example.iurymiguel.bluetoothapp.model.Device"/>
        <variable name="device" type="Device"/>
    </data>
    <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="110dp">

        <android.support.v7.widget.CardView android:layout_width="0dp"
                                            android:layout_height="100dp" app:layout_constraintStart_toStartOf="parent"
                                            android:layout_marginStart="8dp" android:layout_marginEnd="8dp"
                                            app:layout_constraintEnd_toEndOf="parent" android:layout_marginTop="8dp"
                                            app:layout_constraintTop_toTopOf="parent">
            <android.support.constraint.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:paddingTop="5dp">

                <android.support.constraint.ConstraintLayout
                        android:layout_width="wrap_content"
                        android:layout_height="37dp" app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        android:paddingStart="8dp"
                        android:paddingEnd="8dp"
                        android:visibility="@{ device.name != null &amp;&amp; !device.name.isEmpty() ? View.VISIBLE : View.GONE}"
                        android:id="@+id/constraintLayout">

                    <TextView
                            android:text="@string/name"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" app:layout_constraintTop_toTopOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            android:id="@+id/textNameLabel"
                            android:layout_marginTop="17dp" android:layout_marginBottom="8dp"
                            app:layout_constraintBottom_toBottomOf="parent"/>
                    <TextView
                            android:text="@{device.name}"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/textDeviceName"
                            app:layout_constraintBaseline_toBaselineOf="@+id/textNameLabel"
                            app:layout_constraintStart_toEndOf="@+id/textNameLabel" android:layout_marginStart="3dp"/>
                </android.support.constraint.ConstraintLayout>
                <TextView
                        android:text="@string/mac_address"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
                        android:id="@+id/textMacAddressLabel"
                        app:layout_constraintTop_toBottomOf="@+id/constraintLayout"
                        android:layout_marginTop="3dp"/>
                <TextView
                        android:text="@{device.macAddress}"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/textMacAddress"
                        app:layout_constraintBaseline_toBaselineOf="@+id/textMacAddressLabel"
                        app:layout_constraintStart_toEndOf="@+id/textMacAddressLabel" android:layout_marginStart="3dp"/>
                <TextView
                        android:text="@string/rssi"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/textRssiLabel"
                        app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
                        android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/textMacAddressLabel"/>
                <TextView
                        android:text="@{``+device.rssi}"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/textRssi"
                        app:layout_constraintStart_toEndOf="@+id/textRssiLabel" android:layout_marginStart="3dp"
                        app:layout_constraintBaseline_toBaselineOf="@+id/textRssiLabel"/>
            </android.support.constraint.ConstraintLayout>
        </android.support.v7.widget.CardView>


    </android.support.constraint.ConstraintLayout>
</layout>
